--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <p>Frontend developer</p>
                 </div>
                 <div class="flexiable-parent">
-                    <div class="image"><img src="assets/images/social/gt.png"></div>
+                    <div class="image"><img src="assets/images/social/photo1.png"></div>
                     <div class="platform-section">
                         <div class="flx-item">
                             <a href="https://bit.ly/2J49VDy" target="_blank"><img src="assets/images/social/github.png" class="social-res"></a>
@@ -114,7 +114,7 @@
                 <div class="wanky_page" data-pageid="1">
                     <div class="col-md-12 d-lg-none d-block mobile-bio">
                         <div class="flexiable-parent">
-                            <div class="image"><img src="assets/images/me.png"> </div>
+                            <div class="image"><img src="assets/images/social/photo1.png"> </div>
                             <div class="platform-section">
                                 <div class="flx-item">
                                     <a href="#"><img src="assets/images/social/github.png" class="social-res"></a>
