--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                         <div class="grid-item col-md-4 col-sm-6 codeignator"><a href="#" target="_blank"><img src="assets/images/3.png" class="responsive-img"></a></div>
                         <div class="grid-item col-md-4 col-sm-6 psd-html"><a href="https://bit.ly/2ZYtjai" target="_blank"><img src="assets/images/4.png" class="responsive-img"></a></div>
                         <div class="grid-item col-md-4 col-sm-6 codeignator"><a href="#"><img src="assets/images/5.png" class="responsive-img"></a></div>
-                        <div class="grid-item col-md-4 col-sm-6 psd-html"><a href="#"><img src="assets/images/6.png" class="responsive-img"></a></div>
+                        <div class="grid-item col-md-4 col-sm-6 psd-html"><a href="https://bit.ly/2DTtz11" target="_blank"><img src="assets/images/6.png" class="responsive-img"></a></div>
                         <div class="grid-item col-md-4 col-sm-6 codeignator"><a href="#"><img src="assets/images/7.png" class="responsive-img"></a></div>
                     </div>           
                 </div>
