--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                             <div class="image"><img src="assets/images/social/photo1.png"> </div>
                             <div class="platform-section">
                                 <div class="flx-item">
-                                    <a href="#"><img src="assets/images/social/github.png" class="social-res"></a>
+                                    <a href="https://bit.ly/2J49VDy" target="_blank"><img src="assets/images/social/github.png" class="social-res"></a>
                                 </div>
                                 <div class="flx-item">
                                     <a href="#"><img src="assets/images/social/stackoverflow.png" class="social-res"></a>
